# fabric

./: .gitignore  Cargo.toml  default.nix  shell.nix
fabric-rs/: Cargo.toml
fabric-rs/src/: app.rs  dispatch.rs  lib.rs  main.rs  patterns.rs  provider.rs  session.rs
fabric-rs/src/provider/: anthropic.rs
nix/: sources.json
