[package]
name = "fabric-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["env", "derive"] }
directories = "5.0.1"
dotenv = { version = "0.15.0", features = ["clap"] }
inventory = "0.3.15"
lazy_static = "1.5.0"
shellexpand = "3.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "registry"] }
