[package]
name = "fabric-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
clap = { version = "4.5.8", features = ["env", "derive"] }
directories = "5.0.1"
dotenvy = { version = "0.15.7", features = ["clap"] }
eventsource-stream = "0.2.3"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
shellexpand = "3.1.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "registry"] }

[dev-dependencies]
assert_matches = "1.5.0"
cool_asserts = "2.0.3"
